# pyannote-openvino

./: .gitignore  .gitlab-ci.yml  README.md  pyannote_openvino_plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
artifacts/: diarization.rttm  phase1_summary.json  stirling_lennon_final.md  transcribe_v3.txt  transcribe_v4.json
artifacts/test1/: segments.json  transcribe_v4.txt
docs/: phase1_audit.md  transcribe_v3.py  transcribe_v4.py
plans/: phase1_plan.md  phase2_plan.md  phase3_plan.md  phase4_plan.md  phase5_plan.md  phase6_plan.md
pyannote_openvino/: __init__.py  ov_model.py  pipeline.py
scripts/phase1/: audit_models.py
scripts/phase2/: export_embedding.py  export_segmentation.py  validate_onnx.py
scripts/phase3/: convert_to_ov.py  validate_ov.py
tests/: conftest.py  test_ov_pipeline.py
