[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyannote-openvino"
version = "0.1.0"
description = "Drop-in, OpenVINO-accelerated speaker diarization for pyannote.audio."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [{ name = "Andrew Green" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "librosa>=0.11.0",
    "torchaudio>=2.10.0",
    "pyannote-audio>=4.0.4",
    "openvino>=2026.0.0",
    "optimum>=2.1.0",
    "optimum-intel>=1.27.0",
    "optimum-onnx>=0.1.0",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.1",
]

[project.urls]
Homepage = "https://github.com/andrew867/pyannote-openvino"
Repository = "https://github.com/andrew867/pyannote-openvino"
Issues = "https://github.com/andrew867/pyannote-openvino/issues"

[project.optional-dependencies]
stt = [
    "openai-whisper>=20250625",
]
test = [
    "pytest>=8.0",
]
build = [
    "build>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyannote_openvino"]
